🚑️ Hotfix : 구문 수정

--- a/.github/workflows/django_cicd.yml
+++ b/.github/workflows/django_cicd.yml
@@ -88,5 +88,4 @@ jobs:
           docker rm mua-dongguk-server
           docker image rm ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}
           docker run -d -v /home/django/media:/app/media -v /home/django/static:/app/static -e TZ=Asia/Seoul -p 8000:8000 --name mua-dongguk-server ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPONAME }}
-          docker exec -it mua-dongguk-server /bin/bash
-          python manage.py collectstatic --noinput
+          docker exec -it mua-dongguk-server /bin/bash python manage.py collectstatic --noinput
